# motumbo

./: .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-wasm.yml  ci.yml
scripts/: audit-levels.mjs  audit-reach.mjs  build-sim.ps1  debug-camper.mjs  debug-custom.mjs  debug-sizes.mjs  debug-stuck.mjs  setup.ps1  shot.mjs  smoke-render.mjs  test-bots.mjs  test-lockstep.mjs  test-matchmaking-e2e.mjs  test-modes.mjs  test-relay.mjs  test-signal.mjs  test-sim.mjs
sim/: motumbo.c  tumbo.c
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: audio.ts  editor.ts  fx.ts  input.ts  main.ts  mapcodec.ts  minimap.ts  music.ts  net.ts  relay.ts  render.ts  signal.ts  sim.ts  skins.ts  stats.ts  touch.ts  tune.ts  ui.ts  unlocks.ts
